src/pages/Profile/Expert/Expert.css
.tour-list {
  font-size: var(--s-system);
  padding: 0.2rem;
  border-radius: var(--s-unit);
}

.tour-list-item {
  padding: var(--s-unit) var(--s-safe);
  font-size: inherit;
  background-color: transparent;
  border-radius: var(--s-unit);
  font-weight: 500;
  border: 1px solid transparent;
  color: var(--c-dark);
}

.tour-list,
.tour-list-item:hover {
  background-color: var(--c-active);
}

.tour-list-item[aria-selected='true'] {
  background-color: var(--c-white);
  font-weight: 600;
  border: 1px solid var(--c-action);
}

.carousel {
  padding: var(--s-safe) 0;
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
}

.carousel-item {
  font-size: var(--s-system);
  scroll-snap-align: center;
  flex: 96% 0 0;
  place-content: center;
}

.bottom-sheet {
  margin-top: var(--s-system);
  max-width: var(--s-modal);
  border-radius: 1rem 1rem 0 0;
  animation: toast-enter cubic-bezier(0.22, 0.61, 0.36, 1) 0.4s both;
}

.bottom-main {
  transform: scale(0.96);
}

.ornament {
  position: sticky;
  bottom: 0;
  z-index: 2;
  margin: 0 -2rem;
  border-top: 1px solid var(--c-active);
}

.portfolio {
  border: 0;
}

.portfolio legend {
  font-weight: bold;
}

.list-item {
  background-color: var(--c-ambient);
}

@media screen and (max-width: 768px) {
  .portfolio {
    grid-template-columns: 1fr;
  }

  .ornament {
    bottom: var(--s-offset);
    margin: 0 -1.6rem;
  }

  .carousel-item {
    flex: 90% 0 0;
  }
}

@keyframes toast-enter {
  0% {
    opacity: 0.8;
    transform: translateY(100%);
  }
  100% {
    opacity: 1;
    transform: translateY(0%);
  }
}

